tests/fixtures/positive/metrics/slo-rules/settings.gradle.kts
rootProject.name = "slo-rules-positive"

include(":core", ":ui")
