tests/fixtures/negative/metrics/slo-rules/settings.gradle.kts
rootProject.name = "slo-rules-negative"

include(":core", ":ui")
